# CTFd-Py

./: .gitignore  README.md  endpoints.md  main.py  pyproject.toml  users.csv
CTFdPy/: __init__.py  challenges.py  client.py  constants.py  csv.py  files.py  flags.py  hints.py  models.py  tags.py  topics.py  users.py
CTFdPy/api/: __init__.py  api.py  challenges.py  files.py  flags.py  hints.py  tags.py  teams.py  topics.py  users.py
CTFdPy/examples/: create_users_from_csv.py
CTFdPy/models/: challenges.py  files.py  flags.py  hints.py  models.py  tags.py  teams.py  topics.py  users.py
CTFdPy/types/: challenges.py  files.py  flags.py  hints.py  tags.py  teams.py  topics.py  users.py
endpoints/: challenges.md  files.md  flags.md  hints.md  tags.md  teams.md  topics.md  users.md
examples/: create_users_from_csv.py
