[tool.poetry]
name = "CTFdPy"
version = "0.1.0"
description = ""
authors = ["Jus-Codin <70018166+Jus-Codin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
